<resources>
    <string name="app_name">Motivation</string>
    <string name="whats_your_name">Qual seu Nome?</string>
    <string name="label_phrases_all">Todas as frases</string>
    <string name="label_phrases_motivation">Frases de motivação</string>
    <string name="label_phrases_morning">Frases soláres</string>
    <string name="label_greeting_user">Olá, Kotlin!</string>
    <string name="label_phrase">Riscos devem ser corridos, porque o maior perigo é não arriscar nada!</string>
    <string name="button_new_phrase">Nova Frase</string>
</resources>