<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/purple" />

    <ImageView
        android:id="@+id/image_all"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_phrases_all"
        android:src="@drawable/ic_all" />

    <ImageView
        android:id="@+id/image_happy"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_phrases_motivation"
        android:src="@drawable/ic_happy" />

    <ImageView
        android:id="@+id/image_sunny"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/label_phrases_morning"
        android:src="@drawable/ic_sun" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_sunny"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/label_greeting_user"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/label_phrase" />
    <View
        android:id="@+id/view_phrase"
        android:layout_width="128dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewPhrase"
        android:background="@color/purple"
        android:elevation="5dp"/>

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_new_phrase" />
</RelativeLayout>